# os64

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kernel.cpp  kernel.h
arch/x86_64/: boot.S  boot.h  multiboot.h
iso/: menu.lst
link/: kernel.ld
